Use correct histogram name in security_state_model

Histograms.xml uses "SSL.MarkHttpAsStatus" but the code omitted
the "SSL." prefix. This CL fixes the code to match the XML.

BUG=659667

Review-Url: https://codereview.chromium.org/2453063002
Cr-Commit-Position: refs/heads/master@{#427794}

Former-commit-id: fc254a3aee4b483f4bbc0acaa37dbe71648c06ef